Add launcher config for CreateFreebaseLinks